<?xml version="1.0"?>
<package>
  <name>robot_capsule_urdf</name>
  <version>0.1.0</version>
  <description>
    Generation of capsule collision models urdf files.
  </description>

  <maintainer email="antonio.elkhoury@gmail.com">Antonio El Khoury</maintainer>
  <author email="antonio.elkhoury@gmail.com">Antonio El Khoury</author>

  <license>BSD</license>
  <url type="website">https://github.com/laas/robot_capsule_urdf</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>urdfdom_py</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>urdfdom_py</run_depend>
</package>
